--- a/1.html
+++ b/1.html
@@ -10,9 +10,9 @@
     
     <u1>
         <li><a href="zy1.html">作业1</a></li>
-        <li><a href="">作业2</a></li>
-        <li><a href="">作业3</a></li>
-        <li><a href="">作业4</a></li>
+        <li><a href="zy2.html">作业2</a></li>
+        <li><a href="zy3.html">作业3</a></li>
+        <li><a href="ks.html">考试</a></li>
         <li><a href="">作业5</a></li>
         <li><a href="">作业6</a></li>
         <li><a href="">作业7</a></li>
